[project]
name = "docker-s3backup"
version = "5.3.0"
description = "Docker container for S3 backups"
readme = "README.md"
authors = [
    {name = "Todd Kieffer", email = "ToddMKieffer@gmail.com"}
]

requires-python = ">= 3.14"

dependencies = [
    "s3cmd == 2.4.0",
    "python-magic == 0.4.27"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
